<resources>
    <string name="app_name">Salary</string>
    <string name="day">Дневной график</string>
    <string name="change">Сменный график</string>
    <string name="mix">Смешанный график</string>
    <string name="dayWork">Дней отработано</string>
    <string name="partTimeJob">Подработок</string>
    <string name="premium">Персональная надбавка</string>
    <string name="calculation">Рассчет</string>
    <string name="prize">Премия 30%</string>
    <string name="oneTimePrize">Разовая премия</string>
    <string name="chempack">https://www.chempack.ru/</string>
    <string name="_0">0</string>
    <string name="_3000">3000</string>
    <string name="_200">200</string>
    <string name="email">Отправить email разработчику</string>
    <string name="info">Выбрав график и введя колличество отработанных дней вы можете получить рассчет своей заработной платы.</string>
</resources>